# ml

./: .gitignore  README.md  Untitled.ipynb  word2vec.model
FinalChallenge/: Readme.md
FinalChallenge/hiber_final_challenge/: CMakeLists.txt  package.xml  setup.py
FinalChallenge/hiber_final_challenge/launch/: 01_map_generator.launch  02_movement.launch  03_recognize_with_movement.launch  my_pkg.launch  turtlebotmap.launch
FinalChallenge/hiber_final_challenge/src/: 02_goto_goal.py  03_recognize.py  turtlebot.py
FinalChallenge/hiber_final_challenge/worlds/: my_wg_map.pgm  my_wg_map.yaml
FinalChallenge/hiber_final_challenge/worlds/map/: willow-2010-02-18-0.10.yaml
FinalChallenge/samples/: send_request.py  train_neural_net.py
Lectures/: Syllabus of the course Robotics & Data Mining.docx
Lectures/Lecture 01/: Readme.md
Lectures/Lecture 01. Introduction to ML/: Readme.md
Lectures/Lecture 02. Intro to python/: practice_notebook.ipynb
Lectures/Lecture 05 Neural Nets/: Readme.md
Lectures/Lecture 06/: Readme.md
Lectures/Lecture 07/: Readme.md
Lectures/Lecture 07. Deep Learning. CNN/: Lecture 07. Deep Learning.pptx
Lectures/Lecture 08. Clustering/: readme.md
Practice/: Lab01.md  Lab02.md  Lab03.md  Lab04.md  Lab05.md  Lab_master.md
iddo/: lab01.md  readme.md
ml_course_en/: readme.md
ml_course_en/assignments/: Assignment 01. Pandas_titanic.ipynb  Assignment 02 Linreg_optimization.ipynb  Assignment 02. Linear regression.ipynb  Assignment 02_Linear_regression_regul_poly.ipynb  Assignment 02a_Linear_regression_regul_poly.md  Assignment 03. Logit_rf_credit_scoring.ipynb  Assignment 04. Basics of neural networks.ipynb  Assignment 04. ML System design.ipynb  Assignment 05. Unsupervised_learning.ipynb  Assignment 06. Deep learning models.ipynb  readme.md
ml_course_en/lecture02. Basics of python/: Lecture 02. additional_seaborn_matplotlib_plotly.ipynb  Lecture 02. pandas_data_analysis.ipynb  Lecture 02. practice_visual_titanic.ipynb  Readme.md  Seminar_1_python_&_numpy.ipynb  Untitled1.ipynb  Untitled2.ipynb  intro.ipynb  lec01.ipynb  test.py
ml_course_en/lecture03. Linear regression/: lecture03.ipynb
ml_course_en/lecture04. Decision trees. KNN. Logistic regression. Regularization/: Lecture 04-01. decision_trees_kNN.ipynb  Lecture 04-02. Classification. Logistic regression.ipynb  Lecture 04-03 Lasso_ridge.ipynb  Lecture 04-03. Regularization.ipynb  Lecture 04-04. Good_bad_logit_movie_reviews_XOR.ipynb
ml_course_en/lecture05. ML system design/: Lecture 05-01. ML system design.ipynb  Lecture 05-02. Learning_curves.ipynb  Lecture 05-03. Feature_engineering.ipynb  Lecture 05-04. Good_bad_logit_movie_reviews_XOR.ipynb
ml_course_en/lecture06. PCA, clustering/: Untitled.ipynb  (+2 more)
ml_course_ru/: readme.md
(+374 files in other folders)
